# DifferentiableGeodesics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json
CMake/: FindMKL.cmake  FindSuiteSparse.cmake  libigl.cmake
Projects/: CMakeLists.txt
Projects/DifferentiableGeodesics/: CMakeLists.txt
Projects/DifferentiableGeodesics/autodiff/: CST3DShell.cpp  CST3DShell.h  Elasticity.cpp  Elasticity.h  FEMEnergy.cpp  FEMEnergy.h  Misc.cpp  Misc.h  PointToPlane.cpp  PointToPlane.h
Projects/DifferentiableGeodesics/data/: bunny.msh  bunny_idt.txt  bunny_samples.txt  donut_duck_idt.txt  donut_duck_samples.txt  rocker_arm_simplified_idt.txt  torus_dense_idt.txt  torus_dense_samples.txt
Projects/DifferentiableGeodesics/include/: App.h  IntrinsicSimulation.h  Scheduler.h  SimpleTimer.h  Timer.h  Util.h  VecMatDef.h  VoronoiCells.h
Projects/DifferentiableGeodesics/src/: App.cpp  AreaTerms.cpp  DerivativeTest.cpp  DiscreteShell.cpp  EdgeTerms.cpp  FEMSolver.cpp  GeoElasticity.cpp  GeodesicDerivatives.cpp  IntrinsicSimulation.cpp  Objectives.cpp  Scene.cpp  Scheduler.cpp  Util.cpp  Volume.cpp  Voronoi.cpp  VoronoiDerivatives.cpp  VoronoiSimulation.cpp  main.cpp
Solver/: CMakeLists.txt  LBFGS.cpp  LBFGS.h  MMASolver.cpp  MMASolver.h
